# CGMF

./: CMakeLists.txt  README.md
data/: yieldsATKE.Cf252.sf.dat2  yieldsATKE.Cf252.sf.dat3
doc/rtd/: HauserFeshbach.rst  Makefile  classes.rst  code.rst  conf.py  discreteLevels.rst  examples_notebook.rst  fission.py  fissionYields.rst  gammaEmission.rst  histories.rst  index.rst  initialDistributions.rst  installCGMFtk.rst  intro.rst  isomers.rst  levelDensity.rst  license.rst  models.rst  nb_Pnu.ipynb  nb_correlations.ipynb  nb_events.ipynb  nb_fissionYields.ipynb  nb_gammas.ipynb  nb_neutrons.ipynb  nb_pfgs.ipynb  nb_pfns.ipynb  nb_timing.ipynb  neutronEmission.rst  publications.rst  requirements.txt  start.rst  tools.rst  yields.rst
libcgmf/: CMakeLists.txt  cgmf_config.h.in
libcgmf/include/: FissionFragments.h  Yields.h  cgm.h  cgmfEvents.h  cgmfEvents_capi.h  config-ff.h  config.h  dimensions.h  etc.h  evapinterface.h  excinterface.h  exciton.h  gdr.h  global-mcnp.h  global.h  kcksyst.h  kinematics.h  masstable.h  masstable_audi2011.h  masstable_ripl2.h  masstable_ripl3.h  maths.h  mchf.h  optical.h  physics.h  privategrid.h  ripl2levels.h  rngcgm.h  structur.h  terminate.h  uomps.h
libcgmf/src/: CMakeLists.txt  FissionFragments.cpp  Yields.cpp  asympt.cpp  builtin.cpp  cgmfEvents.cpp  cgmfEvents_capi.cpp  config-doxygen  etc.cpp  evapinterface.cpp  excilambda.cpp  excinterface.cpp  exciparm.cpp  excipop.cpp  exciton.cpp  extwave.cpp  gamcas.cpp  gampop.cpp  gdr.cpp  gtrans.cpp  intwave.cpp  kcksyst.cpp  kinematics.cpp  levden.cpp  masstable.cpp  omcalc.cpp  omsetform.cpp  omsetparm.cpp  output.cpp  parpop.cpp  popinit.cpp  ripl2levels.cpp  setup.cpp  smatrix.cpp  specevap.cpp  speclab.cpp  specmain.cpp  specmc.cpp  stattrans.cpp  terminate.cpp
tools/: CGMFtkHistoriesExample.ipynb  CGMFtkYieldsExample.ipynb  README.md  setup.py
tools/CGMFtk/: histories.py  yields.py
tools/tests/: testGammaTiming.py  testGammas.py  testNeutrons.py  testReading.py
utils/: CMakeLists.txt
utils/cgmf/: CMakeLists.txt  cgmf.cpp
utils/cgmf/tests/: CMakeLists.txt
utils/cgmf/tests/cf252sf-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/cf252sf-yields/: CMakeLists.txt  yields.cgmf.serial.0.reference
utils/cgmf/tests/cf254sf-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/np237nf-10MeV-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/np237nf-18MeV-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/np237nf-th-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/pu238sf-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/pu239nf-10MeV-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/pu239nf-15MeV-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/pu239nf-16MeV-yields/: CMakeLists.txt  yields.cgmf.serial.0.reference
utils/cgmf/tests/pu239nf-start-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/pu239nf-th-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/pu240sf-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/pu241nf-10MeV-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/pu241nf-18MeV-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/pu241nf-th-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/pu242sf-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/pu244sf-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/u233nf-10MeV-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/u233nf-18MeV-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/u233nf-th-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/u234nf-10MeV-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/u234nf-18MeV-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/u234nf-th-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/u235nf-10MeV-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/u235nf-10MeV-yields/: CMakeLists.txt  yields.cgmf.serial.0.reference
utils/cgmf/tests/u235nf-18MeV-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/u235nf-th-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/u235nf-time-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/u238nf-10MeV-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/u238nf-18MeV-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
utils/cgmf/tests/u238nf-th-events/: CMakeLists.txt  histories.cgmf.parallel.0.reference  histories.cgmf.parallel.1.reference
(+4 files in other folders)
